--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h1 class="section-title autoDisplay">Let's talk😊</h1>
 
             <div class="social-box autoBlur">
-                <a href="#"><i class='bx bxs-phone'></i> +256755481373</a>
+                <a href="#"><i class='bx bxs-phone'></i> +256 755 481 373</a>
                 <a href="#"><i class='bx bxl-telegram' ></i> @Badrukayo</a>
                 <a href="#"><i class='bx bxl-linkedin-square' ></i> Badru Ndawula</a>
                 <div class="social-icons">
